
gEDA

GNU Electronic Design Automation
------------------------------------------------------------------------------

ChangeLog for libgeda 

Most recent changes are at the top of this file

2000-04-15  Ales Hvezda  <ahvezda@geda.seul.org>

	* src/o_complex.c: Renamed o_complex_return_pin to 
	  o_complex_return_nth_pin

	* src/o_complex.c: Created new o_complex_return_pin_object to support 
	  gnetlist's g_get_pin_attribute

	* src/create_proto: Updated prototype.h creation script to use gtk/glib
          paths from my machine (installed in /usr/local ...)

	* src/o_attrib.c: Added o_attrib_search_attrib_value to support 
	  o_complex_return_pin_object

	* src/o_attrib.c: Added o_attrib_search_attrib_name to support 
	  gnetlist's g_get_pin_attribute

2000-03-23  Ales Hvezda  <ahvezda@geda.seul.org>

	* src/o_net.c: Started fixing the broken code in o_net_consolidate*
	  which was causing a core dump with the new selection code

	* src/o_net.c: Added some intelligence to o_net_consolidate_segments
	  so that objects are properly selected when consolidation happens

2000-03-20  Ales Hvezda  <ahvezda@geda.seul.org>

	* include/struct.h: Added locked_color to OBJECT structure

	* src/s_basic.c: Inited locked_color to -1

	* src/o_selection.c: Removed some old debugging info

	* src/a_basic.c: Removed dead code from o_scale

	* src/o_attrib.c: Removed some more dead code (old selection related) 
	  from o_attrib_*

	* src/o_complex.c: Misc code cleanup
	
	* src/s_color.c: Removed an obsolete comment
	
2000-03-16  Ales Hvezda  <ahvezda@geda.seul.org>

	* src/o_attrib.c: Got o_attrib_set_color to work with the new selection
	  mechanism

2000-03-10  Ales Hvezda  <ahvezda@geda.seul.org>

	* include/struct.h: Added doing_pan variable to TOPLEVEL structure

	* include/struct.h: Added fast_mousepan variable to TOPLEVEL structure

2000-03-09  Ales Hvezda  <ahvezda@geda.seul.org>

	* src/o_attrib.c: Removed the first (of many) o_redraw_single's from