@@ -8,6 +8,14 @@ ChangeLog for libgeda
 
 Most recent changes are at the top of this file
 
+2000-04-16  Ales Hvezda  <ahvezda@geda.seul.org>
+
+	* src/o_text.c: Added some more checking when reading in text items
+          Specifically to check for invalid alignment fields
+
+	* src/o_text.c: Added missing alignment field to some of the other
+	  warning messages in o_text_read
+
 2000-04-15  Ales Hvezda  <ahvezda@geda.seul.org>
 
 	* src/o_complex.c: Renamed o_complex_return_pin to 
